# semantic-rewritten

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  server.py
agents/: openai.yaml
data/: rules.json
mcp_pro/: __init__.py  codex_rewrite_cli.py  config.py  init_cli.py  paths.py  platform_router.py  rewriter.py  rule_store.py  rules_cli.py  server_app.py
mcp_pro_semantic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
samples/: rules_import_example.json
scripts/: codex_rewrite.py  rules_cli.py  secprompt_skill.py
skills/secprompt-skill/: SKILL.md
skills/secprompt-skill/agents/: openai.yaml
skills/secprompt-skill/scripts/: secprompt_skill.py
