[project]
name = "secprompt"
version = "0.1.0"
description = "Compliant semantic rewrite MCP server for security-research prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2.0",
  "platformdirs>=4.2.0",
]

[project.scripts]
secprompt-server = "mcp_pro.server_app:main"
secprompt-rules = "mcp_pro.rules_cli:main"
secprompt-codex = "mcp_pro.codex_rewrite_cli:main"
secprompt-setup = "mcp_pro.init_cli:main"
mcp-pro-server = "mcp_pro.server_app:main"
mcp-pro-rules = "mcp_pro.rules_cli:main"
mcp-pro-codex = "mcp_pro.codex_rewrite_cli:main"
mcp-pro-setup = "mcp_pro.init_cli:main"
mcp-pro-init = "mcp_pro.init_cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_pro*"]

[tool.uv]
dev-dependencies = []
